--- a/best-air-fryers/ninja-air-fryers/index.html
+++ b/best-air-fryers/ninja-air-fryers/index.html
@@ -1,1 +1,360 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Ninja Air Fryers: Hub & Reviews (2026) | KitchenGearLab</title>
+  <meta name="description" content="Ninja air fryers hub: reviews, comparisons, and a calm guide to choosing the right model for your kitchen. Practical trade-offs, not hype." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/" />
+  <meta property="og:title" content="Ninja Air Fryers: Hub & Reviews (2026) | KitchenGearLab" />
+  <meta property="og:description" content="Reviews, comparisons, and a calm guide to choosing the right Ninja air fryer. Practical trade-offs, not hype." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-air-fryers-hub-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Premium editorial kitchen scene featuring Ninja-style air fryers arranged neatly in soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ninja Air Fryers: Hub & Reviews (2026) | KitchenGearLab" />
+  <meta name="twitter:description" content="Reviews, comparisons, and a calm guide to choosing the right Ninja air fryer." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-air-fryers-hub-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Premium editorial kitchen scene featuring Ninja-style air fryers arranged neatly in soft daylight." />
+
+  <!-- Performance: hero preload (update filenames if different) -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryers-hub-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryers-hub-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryers-hub-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Best Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/" },
+          { "@type": "ListItem", "position": 3, "name": "Ninja Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/#webpage",
+        "url": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/",
+        "name": "Ninja Air Fryers: Hub & Reviews (2026)",
+        "description": "Ninja air fryers hub: reviews, comparisons, and a calm guide to choosing the right model for your kitchen.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/ninja-air-fryers-hub-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/" aria-current="page">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <!-- Breadcrumbs (visible) -->
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Ninja Air Fryers</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <p class="kicker">Brand hub</p>
+            <h1 id="hero-title">Ninja Air Fryers</h1>
+
+            <p class="lead">
+              This hub helps you choose the right Ninja-style air fryer by focusing on daily workflow:
+              usable capacity, controls, cleanup friction, and results consistency.
+              We link to reviews and comparisons so you can decide without guessing.
+            </p>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="#start">Start with the essentials</a>
+              <a class="btn btn-secondary" href="#models">Model paths</a>
+            </div>
+
+            <p class="micro-note">
+              Trust-first:
+              <a href="/about/">About</a> ·
+              <a href="/disclosure/">Disclosure</a> ·
+              <a href="/privacy/">Privacy</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryers-hub-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryers-hub-hero-2400x1260.webp 2400w"
+                sizes="(max-width: 900px) 100vw, 40vw"
+              />
+              <img
+                src="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryers-hub-hero-1600x840.webp"
+                width="1600"
+                height="840"
+                alt="Premium editorial kitchen scene featuring Ninja-style air fryers arranged neatly in soft daylight."
+                loading="eager"
+                decoding="async"
+                fetchpriority="high"
+              />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="start" aria-labelledby="start-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="start-title">Start here</h2>
+          <p class="section-subtitle">The quickest route to a confident choice.</p>
+        </div>
+
+        <div class="cards" role="list">
+          <article class="card top-pick" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/">Best Air Fryers</a></h3>
+            <p class="card-text">If you just want the answer: our shortlist with trade-offs explained.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/">Open guide</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/how-to-choose-an-air-fryer/">How to choose</a></h3>
+            <p class="card-text">Capacity, controls, cleanup, and consistency. The boring stuff that saves you money.</p>
+            <p class="card-meta"><a class="card-link" href="/guides/how-to-choose-an-air-fryer/">Read</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></h3>
+            <p class="card-text">When it makes sense, and when it becomes countertop clutter.</p>
+            <p class="card-meta"><a class="card-link" href="/guides/are-air-fryers-worth-it/">Read</a></p>
+          </article>
+        </div>
+
+        <div class="note" style="margin-top: var(--s-6);">
+          <p class="small" style="margin:0;">
+            Tip: ignore marketing capacity first. “Usable capacity” is what fits in one layer without crowding.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="models" aria-labelledby="models-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="models-title">Model paths</h2>
+          <p class="section-subtitle">Pick the path that matches how you cook.</p>
+        </div>
+
+        <div class="cards" role="list">
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Ninja Air Fryer Review</a></h3>
+            <p class="card-text">Who it fits, what it does well, and the trade-offs that matter day-to-day.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Open review</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-air-fryers/ninja-creami-review/">Ninja Creami Review</a></h3>
+            <p class="card-text">Texture results, workflow friction, cleanup, and what to know before buying.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-air-fryers/ninja-creami-review/">Open review</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-vs-philips/">Ninja vs Philips</a></h3>
+            <p class="card-text">A calm side-by-side comparison to choose the right style for your kitchen.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-vs-philips/">Compare</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-vs-cosori/">Ninja vs Cosori</a></h3>
+            <p class="card-text">Trade-offs: controls, results consistency, noise, and cleanup.</p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-vs-cosori/">Compare</a></p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="method" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How we evaluate</h2>
+          <p class="section-subtitle">Repeatable checks. Clear criteria. Trade-offs explained.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">
+            We don’t crown a universal “best”. We explain what changes the day-to-day experience so you can choose what fits your kitchen.
+          </p>
+
+          <ul>
+            <li><strong>Usability:</strong> controls, ergonomics, day-to-day friction.</li>
+            <li><strong>Performance:</strong> consistency under normal home use.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
+            <li><strong>Durability cues:</strong> realistic longevity signals (fit/finish, hinges, coatings).</li>
+            <li><strong>Transparency:</strong> no unverified claims.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              Affiliate disclosure is explicit and separate. See <a href="/disclosure/">Disclosure</a>.
+            </p>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Informational only. Product details change over time and performance can vary by model and usage.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
