--- a/best-air-fryers/ninja-vs-philips/index.html
+++ b/best-air-fryers/ninja-vs-philips/index.html
@@ -1,1 +1,366 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Ninja vs Philips Air Fryers (2026) | KitchenGearLab</title>
+  <meta name="description" content="Ninja vs Philips air fryers in 2026: a calm, practical comparison focused on results, workflow, cleanup, and daily usability. Trade-offs, not hype." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/" />
+  <meta property="og:title" content="Ninja vs Philips Air Fryers (2026) | KitchenGearLab" />
+  <meta property="og:description" content="A calm, practical comparison focused on results, workflow, cleanup, and daily usability. Trade-offs, not hype." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-vs-philips-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Editorial comparison scene with two modern air fryers side-by-side in soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ninja vs Philips Air Fryers (2026) | KitchenGearLab" />
+  <meta name="twitter:description" content="A calm, practical comparison focused on results, workflow, cleanup, and daily usability." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-vs-philips-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Editorial comparison scene with two modern air fryers side-by-side in soft daylight." />
+
+  <!-- Performance -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-philips-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-philips-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/ninja-vs-philips-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Best Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/" },
+          { "@type": "ListItem", "position": 3, "name": "Ninja vs Philips", "item": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/#webpage",
+        "url": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/",
+        "name": "Ninja vs Philips Air Fryers (2026)",
+        "description": "Ninja vs Philips air fryers in 2026: a calm, practical comparison focused on results, workflow, cleanup, and daily usability.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-philips/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/ninja-vs-philips-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" width="32" height="32" alt="" loading="eager" decoding="async" />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Ninja vs Philips</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <p class="kicker">Comparison</p>
+            <h1 id="hero-title">Ninja vs Philips Air Fryers</h1>
+
+            <p class="lead">
+              This is a practical comparison for normal home cooking. We focus on workflow, cleanup friction, and consistency,
+              then explain which “style” fits your kitchen.
+            </p>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="#decision">Quick decision</a>
+              <a class="btn btn-secondary" href="#comparison">Comparison table</a>
+            </div>
+
+            <p class="micro-note">
+              Trust-first:
+              <a href="/about/">About</a> · <a href="/disclosure/">Disclosure</a> · <a href="/privacy/">Privacy</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source type="image/webp"
+                      srcset="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-philips-hero-1600x840.webp 1600w,
+                              https://kitchengearlab.github.io/assets/images/hero/ninja-vs-philips-hero-2400x1260.webp 2400w"
+                      sizes="(max-width: 900px) 100vw, 40vw" />
+              <img src="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-philips-hero-1600x840.webp"
+                   width="1600" height="840"
+                   alt="Editorial comparison scene with two modern air fryers side-by-side in soft daylight."
+                   loading="eager" decoding="async" fetchpriority="high" />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="decision" aria-labelledby="decision-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="decision-title">Quick decision</h2>
+          <p class="section-subtitle">If you just want the direction, start here.</p>
+        </div>
+
+        <div class="pros-cons">
+          <section class="pros">
+            <h3>Choose Ninja if you care most about…</h3>
+            <ul>
+              <li>Direct, practical workflow (quick, no-fuss cooking).</li>
+              <li>Strong everyday “crisping” feel at normal loads.</li>
+              <li>Models that prioritize simple, repeatable use.</li>
+            </ul>
+          </section>
+
+          <section class="cons">
+            <h3>Choose Philips if you care most about…</h3>
+            <ul>
+              <li>Balanced, controlled cooking and a “set it and trust it” style.</li>
+              <li>Lower day-to-day annoyance (depending on model design).</li>
+              <li>A calmer experience when cooking varied foods.</li>
+            </ul>
+          </section>
+        </div>
+
+        <div class="note">
+          <p class="small" style="margin:0;">
+            Real answer: it depends on the exact model family, basket style, and how much food you cook at once.
+            This page explains the trade-offs so you don’t buy the wrong “shape” for your routine.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="comparison" aria-labelledby="table-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="table-title">Comparison table</h2>
+          <p class="section-subtitle">Workflow-first criteria you’ll actually feel.</p>
+        </div>
+
+        <div class="table-wrap">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Criteria</th>
+                <th>Ninja (typical)</th>
+                <th>Philips (typical)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="best">Usable capacity</td>
+                <td class="muted">Often strong for basket-style cooking; verify single-layer space.</td>
+                <td class="muted">Often consistent cooking space; verify real batch comfort.</td>
+              </tr>
+              <tr>
+                <td class="best">Controls & workflow</td>
+                <td class="muted">Direct, fast, “get cooking” style.</td>
+                <td class="muted">Often feels steady and methodical; depends on interface.</td>
+              </tr>
+              <tr>
+                <td class="best">Cleanup friction</td>
+                <td class="muted">Varies by basket/insert; watch crevices and coatings.</td>
+                <td class="muted">Varies by design; aim for fewer parts and easy access.</td>
+              </tr>
+              <tr>
+                <td class="best">Results consistency</td>
+                <td class="muted">Strong when loads are realistic; crowding reduces payoff.</td>
+                <td class="muted">Often stable across varied foods; model matters.</td>
+              </tr>
+              <tr>
+                <td class="best">Footprint</td>
+                <td class="muted">Some models are bulky; measure counter + cabinet clearance.</td>
+                <td class="muted">Some models prioritize compactness; still measure reality.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="two-col">
+          <div class="col">
+            <h3>Related Ninja pages</h3>
+            <ul class="link-list">
+              <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers Hub</a></li>
+              <li><a href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Ninja Air Fryer Review</a></li>
+              <li><a href="/best-air-fryers/ninja-air-fryers/ninja-creami-review/">Ninja Creami Review</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Need a shortlist instead?</h3>
+            <ul class="link-list">
+              <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+              <li><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></li>
+              <li><a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section" id="method" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How we evaluate</h2>
+          <p class="section-subtitle">Repeatable checks. Clear criteria. Trade-offs explained.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">
+            We evaluate air fryers with repeatable checks and clear criteria. Our goal is not hype, but clarity.
+          </p>
+          <ul>
+            <li><strong>Usability:</strong> controls, ergonomics, day-to-day friction.</li>
+            <li><strong>Performance:</strong> consistency under normal home use.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
+            <li><strong>Durability cues:</strong> realistic longevity signals (fit/finish, hinges, coatings).</li>
+            <li><strong>Transparency:</strong> no unverified claims.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">Affiliate disclosure is explicit and separate. See <a href="/disclosure/">Disclosure</a>.</p>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">Informational only. Models and performance vary by usage, batch size, and food type.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.</p>
+        <p class="small">Privacy: <a href="/privacy/">Privacy policy</a>.</p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
